jena-shex/src/test/files/spec/negativeSyntax/PNAME_NS-dot-at-start-declared.shex
# PN_PREFIX with declared FULL STOP in first character
# source: turtle-syntax-bad-ns-dot-start.ttl
PREFIX valid: <http://a.example/ns/valid#>
PREFIX .invalid: <http://a.example/ns/invalid#>

valid:s valid:p .invalid:o .
